compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test1-2.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 91
expression: "pub type Money { Pound(Int) }\n                    fn pound(x) { Pound(x) }"
---
-module(the_app).
-compile(no_auto_import).

-export_type([money/0]).

-type money() :: {pound, integer()}.

-spec pound(integer()) -> money().
pound(X) ->
    {pound, X}.

