compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test1-6.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 105
expression: "fn add(x, y) { x + y }\n                    pub fn go() { 1 |> add(_, 1) |> add(2, _) |> add(_, 3) }"
---
-module(the_app).
-compile(no_auto_import).

-export([go/0]).

-spec add(integer(), integer()) -> integer().
add(X, Y) ->
    X + Y.

-spec go() -> integer().
go() ->
    _pipe = 1,
    _pipe@1 = add(_pipe, 1),
    _pipe@2 = add(2, _pipe@1),
    add(_pipe@2, 3).

