compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test1-7.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 110
expression: "pub fn and(x, y) { x && y }\npub fn or(x, y) { x || y }\npub fn modulo(x, y) { x % y }\npub fn fdiv(x, y) { x /. y }\n            "
---
-module(the_app).
-compile(no_auto_import).

-export(['and'/2, 'or'/2, modulo/2, fdiv/2]).

-spec 'and'(boolean(), boolean()) -> boolean().
'and'(X, Y) ->
    X andalso Y.

-spec 'or'(boolean(), boolean()) -> boolean().
'or'(X, Y) ->
    X orelse Y.

-spec modulo(integer(), integer()) -> integer().
modulo(X, Y) ->
    case Y of
        0 -> 0;
        Gleam@denominator -> X rem Gleam@denominator
    end.

-spec fdiv(float(), float()) -> float().
fdiv(X, Y) ->
    case Y of
        0.0 -> 0.0;
        Gleam@denominator -> X / Gleam@denominator
    end.

